@@ -1,3 +1,14 @@
+2000-12-06  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>
+
+	* include/am_defs.h: force non-inclusion of <linux/fs.h> via
+	<linux/auto_fs.h>
+
+	* conf/autofs/autofs_linux.c (autofs_mounted): rename
+	AUTOFS_MIN_PROTO_VERSION to AUTOFS_MIN_VERSION (leftover from
+	previous commit)
+
+	* configure.in: fixed libtool version
+
 2000-12-02  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>
 
 	* conf/autofs/autofs_linux.h: added struct autofs_pending_mount;
